--- a/src/Components/Pages/UserDetails/UserDetails.scss
+++ b/src/Components/Pages/UserDetails/UserDetails.scss
@@ -5,7 +5,6 @@
 
 
 .userDetails {
-    background-color: $white;
     transition: $noramlTransition;
     height: 100vh;
 
@@ -14,26 +13,28 @@
         justify-content: space-evenly;
 
         .userData {
-            background-color: $white;
+             background-color: $white;
             background-color: $primaryColor;
             border: 10px solid lighten($primaryColor, 10);
-            margin: 1.5rem 0;
+            padding: 4rem 1rem;
             border-radius: calc($borderRadius * 3);
-
+            margin-top: 10px;
+            width: 400px;
             .userData_value {
                 margin: 1rem 0;
                 display: flex;
-                flex-wrap: wrap;
-
+                flex-wrap: no-wrap;
                 .title {
-                    background-color: $white;
+                    // background-color: $white;
                     padding: 5px;
                     border-radius: $borderRadius;
                     margin-right: 10px;
                     width: fit-content;
                 }
 
-                .value {}
+                .value {
+                    margin-top: 5px;
+                }
             }
         }
 
@@ -53,9 +54,6 @@
 
     background-color: $primaryColorDark;
     color: $white;
-
-
-
     .row {
 
         .userData {
