--- a/src/Components/Shared/BookForm/bookForm.scss
+++ b/src/Components/Shared/BookForm/bookForm.scss
@@ -110,6 +110,11 @@
                 border: 10px solid lighten($secoundryColorDark, 30);
                 background-color: lighten($secoundryColorDark, 40);
             }
+            .pay-button{
+                border: none;
+                display: flex;
+                background-color: transparent;
+            }
 
         }
 
