--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -21,6 +21,8 @@ li {
   align-items: center;
   justify-content: space-around;
   height: 4rem;
+  position: relative;
+  z-index: 1;
   // background: #51acf1;
 
   .nav__logo {
@@ -69,11 +71,11 @@ li {
           background-color: rgb(255, 255, 255);
           position: absolute;
 
-          z-index: 500;
           top: 100%;
           left: 0;
           display: none;
           transition: $noramlTransition;
+          // z-index: 1000;
 
           flex-direction: column;
 
