--- a/src/Components/Shared/BookForm/bookForm.scss
+++ b/src/Components/Shared/BookForm/bookForm.scss
@@ -2,6 +2,7 @@
 @import "../../../Style/shortcuts.scss";
 
 .bookForm {
+    
     .my-form {
 
         padding: 2rem;
@@ -9,6 +10,8 @@
         background-color: rgb(255, 255, 255);
         border-radius: calc($borderRadius * 3);
         @include dFlex;
+        // display: none;
+
 
         .inputContainer {
             @include dFlex;
@@ -17,6 +20,17 @@
             border-radius: calc($borderRadius * 1.5);
             padding: 10px 15px;
             border: 1px solid $liteGray;
+            transition: all ease-in-out 0.9s;
+
+            &:hover {
+                background-color: $primaryColor;
+
+                >label {
+                    background-color: $white;
+                    color: $primaryColor;
+                }
+
+            }
 
             label {
                 padding: 5px 10px;
@@ -34,27 +48,46 @@
         }
 
         .bookAction {
-           display: flex;
-           justify-content: space-evenly;
+            display: flex;
+            justify-content: space-evenly;
 
             flex-direction: row;
             padding: 2rem;
 
             border: 10px solid lighten($primaryColor, 5%);
             background-color: $primaryColor;
+
             border-radius: calc($borderRadius * 3);
-            .price{
+
+            .price {
                 border: 10px solid lighten($primaryColor, 5%);
                 background-color: $white;
                 border-radius: calc($borderRadius * 3);
-
+                min-width: 200px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: center;
+                justify-content: space-evenly;
 
+                .title {
+                    padding: 0.3em 0.7em;
+                    background-color: $secoundryColor ;
+
+                    border-radius: $borderRadius;
+                }
+
+                .total {
+
+                    font-weight: bold;
+
+                    span {
+                        font-weight: lighter;
+                        color: $gray;
+                    }
+                }
             }
-            .booking{
+
+            .booking {
                 border: 10px solid lighten($primaryColor, 5%);
                 background-color: $white;
                 border-radius: calc($borderRadius * 3);
@@ -74,11 +107,12 @@
     }
 }
 
-.bookfalse{
+.bookfalse {
     .my-form {
         padding: 2rem;
         border: 10px solid lighten($secoundryColorDark, 10) !important;
         background-color: $secoundryColorDark;
+
         .inputContainer {
             border: 1px solid lighten($secoundryColorDark, 10);
 
@@ -96,17 +130,19 @@
         }
 
         .bookAction {
-       
+
 
             border: 10px solid lighten($secoundryColorDark, 40);
             background-color: lighten($secoundryColorDark, 20);
             border-radius: calc($borderRadius * 3);
-            .price{
+
+            .price {
                 border: 10px solid lighten($secoundryColorDark, 30);
                 background-color: lighten($secoundryColorDark, 40);
                 border-radius: calc($borderRadius * 3);
             }
-            .booking{
+
+            .booking {
                 border: 10px solid lighten($secoundryColorDark, 30);
                 background-color: lighten($secoundryColorDark, 40);
             }
