--- a/src/Components/Pages/BookHoliday/bookHoliday.module.scss
+++ b/src/Components/Pages/BookHoliday/bookHoliday.module.scss
@@ -1,11 +1,20 @@
 @import "../../../Style/colors.scss";
-// @import "../../../Style/";
+@import"../../../Style/shortcuts.scss";
+
+@import "../../../Style/";
 
 
 
-.book-container{
+.formCard{
 
-   
+    border: 10px solid lighten($primaryColor, 5%);
+    background-color: $white;
+    border-radius: calc($borderRadius * 3);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
 }
 
