Solve the problem Flight Card

--- a/src/Components/Pages/BookHoliday/bookHoliday.module.scss
+++ b/src/Components/Pages/BookHoliday/bookHoliday.module.scss
@@ -1,7 +1,7 @@
 @import "../../../Style/colors.scss";
 @import"../../../Style/shortcuts.scss";
 
-@import "../../../Style/";
+// @import "../../../Style/";
 
 
 
