--- a/src/Components/Pages/Home/home.scss
+++ b/src/Components/Pages/Home/home.scss
@@ -121,7 +121,7 @@
 
 
                 img {
-                    width: 350px;
+                    width: 100%;
                     margin-bottom: 2rem;
                 }
             }
@@ -294,7 +294,7 @@
                 flex-direction: column;
 
                 img {
-                    width: 500px;
+                    width: 100%;
                 }
 
                 h3 {
